Trying to get menu to display correctly on mobile devices with high resolutions. Added second part to media query.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ p {
   color: #009;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 800px) or @media handheld and (orientation:portrait) {
   #nav ul {
     position: relative;
     top: 0;
